add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1690,18 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoi-thi-tuyen-dien-vien-nu" title="Buổi Thi Tuyển Diễn Viên Nữ">
+          <a class="list-top-movie-link" href="/phim-moi/we-own-this-city" title="We Own This City">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoi-thi-tuyen-dien-vien-nu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/we-own-this-city-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Buổi Thi Tuyển Diễn Viên Nữ
+             We Own This City
             </span>
             <span class="list-top-movie-item-en">
-             일반인 초대녀
+             We Own This City
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1712,18 +1712,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-khoang-nhuong" title="Không Khoang Nhượng">
+          <a class="list-top-movie-link" href="/phim-moi/ong-bo-vo-dich" title="Ông Bố Vô Địch">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-khoang-nhuong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-bo-vo-dich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không Khoang Nhượng
+             Ông Bố Vô Địch
             </span>
             <span class="list-top-movie-item-en">
-             Trust No 1
+             Invincible Daddy
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/me-dung-lam-vay" title="Mẹ, đừng làm vậy!">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-dung-lam-vay-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Mẹ, đừng làm vậy!
+            </span>
+            <span class="list-top-movie-item-en">
+             Mom, Don't Do That!
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1734,40 +1756,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khong-chun-buoc-2" title="Không chùn bước 2">
+          <a class="list-top-movie-link" href="/phim-moi/cong-tuoc-tu-than-va-co-hau" title="Công tước tử thần và cô hầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-chun-buoc-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-tuoc-tu-than-va-co-hau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Không chùn bước 2
+             Công tước tử thần và cô hầu
             </span>
             <span class="list-top-movie-item-en">
-             Never Back Down 2: The Beatdown
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-thanh-xuan-bi-hai-cua-toi-qua-nhien-la-sai-lam-tiep-tuc" title="Chuyện tình thanh xuân bi hài của tôi quả nhiên là sai lầm (tiếp tục)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-thanh-xuan-bi-hai-cua-toi-qua-nhien-la-sai-lam-tiep-tuc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyện tình thanh xuân bi hài của tôi quả nhiên là sai lầm (tiếp tục)
-            </span>
-            <span class="list-top-movie-item-en">
-             My youth romantic comedy is wrong as I expected.2
+             Shinigami Bocchan to Kuro Maid, The Duke of Death and His Maid
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1778,21 +1778,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-riverdale-phan-1" title="Thị trấn Riverdale (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/sex-and-lucia" title="Sex and Lucía">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-riverdale-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sex-and-lucia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thị trấn Riverdale (Phần 1)
+             Sex and Lucía
             </span>
             <span class="list-top-movie-item-en">
-             Riverdale (Season 1)
+             Sex and Lucía
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
