add new website from server na

--- a/xem-phim-moi/ke-trom-mat-trang/index.html
+++ b/xem-phim-moi/ke-trom-mat-trang/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1690,40 +1690,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/we-own-this-city" title="We Own This City">
+          <a class="list-top-movie-link" href="/phim-moi/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3" title="Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/we-own-this-city-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chico-bon-bon-chu-khi-va-that-lung-do-nghe-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             We Own This City
+             Chico Bon Bon: Chú khỉ và thắt lưng đồ nghề (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             We Own This City
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-bo-vo-dich" title="Ông Bố Vô Địch">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-bo-vo-dich-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ông Bố Vô Địch
-            </span>
-            <span class="list-top-movie-item-en">
-             Invincible Daddy
+             Chico Bon Bon: Monkey with a Tool Belt (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1734,18 +1712,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/me-dung-lam-vay" title="Mẹ, đừng làm vậy!">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-the-he-tiep-theo-phan-3" title="Star Trek: Thế hệ tiếp theo (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/me-dung-lam-vay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-the-he-tiep-theo-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mẹ, đừng làm vậy!
+             Star Trek: Thế hệ tiếp theo (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Mom, Don't Do That!
+             Star Trek: The Next Generation (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-va-vo-chinh-phu-phan-1" title="Tình yêu và vô chính phủ (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-va-vo-chinh-phu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tình yêu và vô chính phủ (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Love &amp; Anarchy (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1756,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-tuoc-tu-than-va-co-hau" title="Công tước tử thần và cô hầu">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-canh-sat" title="Học Viện Cảnh Sát">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-tuoc-tu-than-va-co-hau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-canh-sat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công tước tử thần và cô hầu
+             Học Viện Cảnh Sát
             </span>
             <span class="list-top-movie-item-en">
-             Shinigami Bocchan to Kuro Maid, The Duke of Death and His Maid
+             Police University
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,18 +1778,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sex-and-lucia" title="Sex and Lucía">
+          <a class="list-top-movie-link" href="/phim-moi/ban-ma-phien-toai" title="Bạn Ma Phiền Toái">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sex-and-lucia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-ma-phien-toai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sex and Lucía
+             Bạn Ma Phiền Toái
             </span>
             <span class="list-top-movie-item-en">
-             Sex and Lucía
+             Wonderful Ghost
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
