add new website from server na

--- a/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
+++ b/xem-phim-moi/vung-dat-cam-lang-ngay-mot/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-o-nha-tre" title="Đêm ở nhà trẻ">
+          <a class="list-top-movie-link" href="/phim-moi/chip-va-potato-phan-2" title="Chip và Potato (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-o-nha-tre-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chip-va-potato-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm ở nhà trẻ
+             Chip và Potato (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             A Night at the Kindergarten
+             Chip and Potato (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1807,40 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/snatch" title="Snatch">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-nhan-ma-phan-1" title="Thế giới nhân mã (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/snatch-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-nhan-ma-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Snatch
+             Thế giới nhân mã (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Snatch
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/one-piece-episodo-obu-choppa-fuyu-ni-saku-kiseki-no-sakura" title="One piece: Episodo obu choppa + Fuyu ni saku, kiseki no sakura">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/one-piece-episodo-obu-choppa-fuyu-ni-saku-kiseki-no-sakura-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             One piece: Episodo obu choppa + Fuyu ni saku, kiseki no sakura
-            </span>
-            <span class="list-top-movie-item-en">
-             One piece: Episodo obu choppa + Fuyu ni saku, kiseki no sakura
+             Centaurworld (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/jwanita" title="Jwanita">
+          <a class="list-top-movie-link" href="/phim-moi/cracks" title="Cracks">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jwanita-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cracks-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Jwanita
+             Cracks
             </span>
             <span class="list-top-movie-item-en">
-             Jwanita
+             Cracks
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1851,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-phieu-luu-cua-mr-peabody-cau-be-sherman" title="Cuộc Phiêu Lưu Của Mr. Peabody &amp; Cậu Bé Sherman">
+          <a class="list-top-movie-link" href="/phim-moi/tan-ban-sinh-duyen" title="Tân Bán Sinh Duyên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-phieu-luu-cua-mr-peabody-cau-be-sherman-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-ban-sinh-duyen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Phiêu Lưu Của Mr. Peabody &amp; Cậu Bé Sherman
+             Tân Bán Sinh Duyên
             </span>
             <span class="list-top-movie-item-en">
-             Mr. Peabody &amp; Sherman
+             Half A Lifelong Romance
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/truyen-la-truong-an" title="Truyện Lạ Trường An">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-la-truong-an-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Truyện Lạ Trường An
+            </span>
+            <span class="list-top-movie-item-en">
+             The Man's Secret
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
